--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,7 +3,6 @@ server {
     server_name localhost;
 
     root /var/www/html/public;
-
     index index.php index.html;
 
     location / {
@@ -13,11 +12,15 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
         deny all;
+    }
+
+    location /build/ {
+        try_files $uri /index.php?$query_string;
     }
 }
