--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,21 +3,30 @@ server {
     server_name localhost;
 
     root /var/www/html/public;
-
     index index.php index.html;
 
+    charset utf-8;
+
+    # Laravel routing
     location / {
-        try_files $uri /index.php?$query_string;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP-FPM
     location ~ \.php$ {
-        include fastcgi_params;
+        include fastcgi.conf;
         fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_index index.php;
+        fastcgi_read_timeout 300;
     }
 
-    location ~ /\.ht {
+    # Deny hidden files
+    location ~ /\.(?!well-known).* {
         deny all;
+    }
+
+    # Cache static assets
+    location ~* \.(css|js|jpg|jpeg|png|gif|svg|ico|woff2?)$ {
+        expires 30d;
+        access_log off;
     }
 }
