--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -2,7 +2,17 @@
 nodaemon=true
 
 [program:php-fpm]
-command=/usr/local/sbin/php-fpm
+command=/usr/local/sbin/php-fpm -F
+priority=10
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
+priority=20
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
